src/test/ui/error-codes/E0415.stderr
error[E0415]: identifier `f` is bound more than once in this parameter list
  --> $DIR/E0415.rs:11:16
   |
LL | fn foo(f: i32, f: i32) {} //~ ERROR E0415
   |                ^ used as parameter more than once

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0415"
